--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "INSERT_YOUR_CONNECTION_STRING"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
